made contact us colorful

--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -1,4 +1,9 @@
+{% if page.dark %}
+<section class="secondary-section">
+{% else %}
 <section class="primary-section">
+{% endif %}
+
 	<div class="container">
 		<h1>Contact Us!</h1>
 		<form id="contact-us">
