--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,6 +1,7 @@
 // thos imports tho
 @import 'config/variables';
 @import 'components/background';
+@import 'components/custom-hr';
 @import 'components/form';
 @import 'components/item';
 @import 'components/map';
