--- a/_includes/navbar-compact.html
+++ b/_includes/navbar-compact.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-	<div class="container wide-container">
+	<div class="container">
 		<div class="navbar-brand">
 			<img src="img/pfp%20logo.png" />
 		</div>
