added dropdown style

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -2,6 +2,7 @@
 @import 'config/variables';
 @import 'components/background';
 @import 'components/custom-hr';
+@import 'components/dropdown';
 @import 'components/form';
 @import 'components/item';
 @import 'components/map';
