--- a/_sass/components/navbar.scss
+++ b/_sass/components/navbar.scss
@@ -1,3 +1,4 @@
+
 .navbar {
 	box-sizing: border-box;
 	position: absolute;
@@ -15,7 +16,7 @@
 
 		& > img {
 			padding-right: 1em;
-			height: 2em;
+			height: 1.75em;
 		}
 	}
 
@@ -34,8 +35,39 @@
 		display: block;
 		float: left;
 		font-size:1.3em;
-		padding-left: 1.5em;
-		line-height: 2;
+		padding-left: 1.25em;
+		line-height: 2.5;
+
+		ul.dropdown {
+			box-shadow: 0 6px 16px rgba(0,0,0,.25);
+			padding: 0px;
+
+			li {
+				a {
+					color: white;
+					text-decoration: none;
+				}
+
+				&:hover {
+					a {
+						border-bottom: solid 2px #d8b600;
+					}
+				}
+			}
+
+			&:hover {
+				display: block;
+			}
+		}
+
+		&:hover {
+
+			& > ul.dropdown {
+				display: block;
+
+			}
+
+		}
 
 		& > a {
 			color: white;
