--- a/_includes/navbar-compact.html
+++ b/_includes/navbar-compact.html
@@ -1,28 +1,5 @@
 <div class="navbar">
 	<div class="container">
-		<div class="navbar-brand">
-			<img src="img/pfp%20logo.png" />
-		</div>
-		<div class="vertical-center-parent">
-			<ul class="navbar-child-container navbar-right">
-				<li class="navbar-child">
-					<a href="#">Home</a>
-				</li>
-				<li class="navbar-child">
-					<a href="#">Our Teams</a>
-					<ul class="dropdown">
-						<li><a href="#">FLL</a></li>
-						<li><a href="#">FTC</a></li>
-						<li><a href="#">FRC</a></li>
-					</ul>
-				</li>
-				<li class="navbar-child">
-					<a href="#">Events</a>
-				</li>
-				<li class="navbar-child">
-					<a href="#">BoilerLink</a>
-				</li>
-			</ul>
-		</div>
+		{% include base-navbar.html %}
 	</div>
 </div>
