--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -1,2 +1,4 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }}</title>
 <link type="text/css" rel="stylesheet" href="{{"/style.css" | prepend: site.baseurl}}"></link>
