switched over to the 1337 svg lyfe

--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -1,5 +1,5 @@
 <div class="navbar-brand">
-	<img src="img/pfp%20logo.png" />
+	<img src="{{"img/pfp_logo.svg" | site.baseurl}}" />
 </div>
 <div class="vertical-center-parent">
 	<ul class="navbar-child-container navbar-right">
