--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -8,6 +8,7 @@
 @import 'components/map';
 @import 'components/navbar';
 @import 'components/section';
+@import 'components/table';
 
 body {
 	font-family: "Verdana", sans;
