--- a/_sass/config/variables.scss
+++ b/_sass/config/variables.scss
@@ -1,8 +1,10 @@
 $accent-one: #50b5f0;
-$accent-two: #FFFBDF;
+$accent-two: #fffbdf;
 $accent-three: #f05f68;
 
 $accent-461: #fff2aa;
-$accent-1646: #FF919A;
-$accent-1747: #AEE88F;
+$accent-1646: #ff919a;
+$accent-1747: #aee88f;
 $accent-4272: $accent-1646;
+
+$pfp-yellow: #d8b600;
