--- a/_sass/components/navbar.scss
+++ b/_sass/components/navbar.scss
@@ -82,7 +82,7 @@
 
 				&:hover {
 					a {
-						border-bottom: solid 2px #d8b600;
+						border-bottom: solid 2px $pfp-yellow;
 					}
 				}
 			}
@@ -105,7 +105,7 @@
 			color: white;
 			text-decoration: none;
 			&:hover {
-				border-bottom: solid 2px #d8b600;
+				border-bottom: solid 2px $pfp-yellow;
 			}
 		}
 	}
