update event include

--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -8,13 +8,13 @@
 				<a href="#">Home</a>
 			</li>
 			<li class="navbar-child">
-				<a href="#">Agenda</a>
+				<a href="#agenda">Agenda</a>
 			</li>
 			<li class="navbar-child">
-				<a href="#">Location</a>
+				<a href="#location">Location</a>
 			</li>
 			<li class="navbar-child">
-				<a href="#">Media</a>
+				<a href="#external">Media</a>
 			</li>
 		</ul>
 	</div>
