started work on FTC Event page

--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -1,7 +1,7 @@
 <div class="navbar">
 	<div class="container wide-container">
 		<div class="navbar-brand">
-			Purdue District Event
+			{{ page.title }}
 		</div>
 		<ul class="navbar-child-container navbar-right">
 			<li class="navbar-child">
