get (lol) ready for this killer ftc event

--- a/_layouts/big-image.html
+++ b/_layouts/big-image.html
@@ -6,7 +6,7 @@
 		{% include navbar-main.html %}
 		<div class="bg-img" style="background-image: url('{{ page.image | prepend: "/img/" | prepend: site.baseurl}}');">
 			<div class="bg">
-				<div class="mission vertical-center">
+				<div class="mission vertical-center move-small">
 					{% if page.mission-title %}
 					<h1>{{ page.mission-title }} </h1>
 					{% endif %}
