--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -15,7 +15,10 @@
 			</ul>
 		</li>
 		<li class="navbar-child">
-			<a href="{{"regional-index" | prepend: site.baseurl}}">Events</a>
+			<a href="#">Our Events</a>
+			<ul class="dropdown">
+				<li><a href="{{"ftc-state" | prepend: site.baseurl}}">FTC</a></li>
+			</ul>
 		</li>
 		<li class="navbar-child">
 			<a href="https://boilerlink.purdue.edu/organization/purduefirstprograms/">BoilerLink</a>
