--- a/_sass/components/background.scss
+++ b/_sass/components/background.scss
@@ -4,7 +4,8 @@
 	width: 100%;
 	background: #fff url("../img/crossroads-2014-2.jpg") scroll right top;
 	background-position: center center;
-	background-size:cover;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 .bg {
 	z-index: -1;
@@ -25,6 +26,8 @@
 	min-height: 800px;
 	background: #fff url("../img/crossroads-2014.jpg") scroll right top;
 	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 .vertical-center-parent {
 	-webkit-transform-style: preserve-3d;
@@ -73,5 +76,9 @@
 		width: auto;
 		padding: 4em;
 	}
-
+}
+@media (max-width: 440px) {
+	.mission {
+		top: 65%;
+	}
 }
