added sponsor section

--- a/_sass/components/section.scss
+++ b/_sass/components/section.scss
@@ -30,6 +30,15 @@ section {
 		margin: auto;
 		max-width: 100%;
 	}
+	img.sponsor-logo {
+		width: 24em;
+		height: auto;
+		max-width: 100%;
+		border: none;
+		float: none;
+		display: block;
+		margin: auto;
+	}
 }
 .primary-section {
 	width: 100%;
