reordering for consistancy

--- a/_sass/components/section.scss
+++ b/_sass/components/section.scss
@@ -48,6 +48,9 @@ section {
 	hr {
 		border: 2px solid #444444;
 	}
+	img {
+		border-color: #444444
+	}
 }
 .secondary-section {
 	background-color: #444444;
