add link to pfp

--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -16,6 +16,9 @@
 			<li class="navbar-child">
 				<a href="#external">Media</a>
 			</li>
+			<li class="navbar-child">
+				<a href="{{ "/" | prepend: site.baseurl }}">PFP</a>
+			</li>
 		</ul>
 	</div>
 </div>
