content changes, layout changes, add logo floating by team description

--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -1,9 +1,8 @@
 {% if page.dark %}
-<section class="secondary-section">
+<section class="secondary-section contact">
 {% else %}
-<section class="primary-section">
+<section class="primary-section contact">
 {% endif %}
-
 	<div class="container">
 		<h1>Contact Us!</h1>
 		<form id="contact-us" contact-addr="{{ page.contact }}">
