--- a/_includes/navbar-main.html
+++ b/_includes/navbar-main.html
@@ -1,3 +1,13 @@
+<div id="note">
+	<a href="https://dayofgiving.purdue.edu/school/west-lafayette-student-organizations/?utm_source=stuorgpage_Purdue FIRST Programs&utm_medium=email_April27&utm_campaign=PDOG2016">Donate</a> to Purdue Day of Giving for PFP by April 27th. <a id="close">x</a>
+</div>
+<script>
+ close = document.getElementById("close");
+ close.addEventListener('click', function() {
+   note = document.getElementById("note");
+   note.style.display = 'none';
+ }, false);
+</script>
 <div class="navbar">
 	<div class="container wide-container">
 		{% include base-navbar.html %}
