--- a/_sass/components/navbar.scss
+++ b/_sass/components/navbar.scss
@@ -1,3 +1,45 @@
+//stupid things for notifications
+#note {
+    position: absolute;
+    z-index: 101;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: rgba(10,10,10,0.75);
+	border-bottom: 2px #d8b600 solid;
+	border-radius: 2px;
+    text-align: center;
+    line-height: 2.5;
+    overflow: hidden;
+    -webkit-box-shadow: 0 0 5px black;
+    -moz-box-shadow:    0 0 5px black;
+    box-shadow:         0 0 5px black;
+	color:white;
+	a {
+		color: white;
+	}
+}
+@-webkit-keyframes slideDown {
+    0%, 100% { -webkit-transform: translateY(-50px); }
+    10%, 90% { -webkit-transform: translateY(0px); }
+}
+@-moz-keyframes slideDown {
+    0%, 100% { -moz-transform: translateY(-50px); }
+    10%, 90% { -moz-transform: translateY(0px); }
+}
+@keyframes slideDown {
+    0%, 100% { transform: translateY(-50px); }
+    10%, 90% { transform: translateY(0px); }
+}
+.cssanimations .csstransforms #note {
+    -webkit-transform: translateY(-50px);
+    -webkit-animation: slideDown 2.5s 1.0s 1 ease forwards;
+    -moz-transform:    translateY(-50px);
+    -moz-animation:    slideDown 2.5s 1.0s 1 ease forwards;
+    transform: translateY(-50px);
+    animation:    slideDown 2.5s 1.0s 1 ease forwards;
+}
+
 @media (max-width: 890px) {
 	.navbar {
 		margin: auto;
