--- a/_includes/navbar-main.html
+++ b/_includes/navbar-main.html
@@ -1,5 +1,5 @@
 <div id="note">
-	<a href="https://dayofgiving.purdue.edu/school/west-lafayette-student-organizations/?utm_source=stuorgpage_Purdue FIRST Programs&utm_medium=email_April27&utm_campaign=PDOG2016">Donate</a> to Purdue Day of Giving for PFP by April 27th. <a id="close">x</a>
+	Check out our off season event <a href="/boiler-bot-bash">Boiler Bot Bash!</a> <a id="close">x</a>
 </div>
 <script>
  close = document.getElementById("close");
