--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -17,6 +17,7 @@
 		<li class="navbar-child">
 			<a href="#">Our Events</a>
 			<ul class="dropdown">
+				<li><a href="{{"boiler-bot-bash" | prepend: site.baseurl}}">Boiler Bot Bash</a></li>
 				<li><a href="{{"ftc-state" | prepend: site.baseurl}}">FTC</a></li>
 			</ul>
 		</li>
