--- a/_includes/navbar-main.html
+++ b/_includes/navbar-main.html
@@ -1,5 +1,5 @@
 <div id="note">
-	Check out our off season event <a href="{{"boiler-bot-bash" | prepend: site.baseurl}}">Boiler Bot Bash!</a> <a id="close">x</a>
+	Check out our off season event <a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle!</a> <a id="close">x</a>
 </div>
 <script>
  close = document.getElementById("close");
