ux update for BBB

--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -11,6 +11,9 @@
 				<a href="#location">Location</a>
 			</li>
 			<li class="navbar-child">
+				<a href="#schedule">Schedule</a>
+			</li>
+			<li class="navbar-child">
 				<a href="{{ "/" | prepend: site.baseurl }}">PFP</a>
 			</li>
 		</ul>
