registration goes live!!!

--- a/_layouts/event-image.html
+++ b/_layouts/event-image.html
@@ -20,7 +20,7 @@
 					</p>
 					{% if page.link %}
 					<div class="btn-container">
-						<a class="btn btn-signup" href="{{page.link}}">Mailing List Sign Up</a>
+						<a class="btn btn-signup" href="{{page.link}}">Registration</a>
 					</div>
 					{% endif %}
 				</section>
