--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -14,6 +14,9 @@
 				<a href="#schedule">Schedule</a>
 			</li>
 			<li class="navbar-child">
+				<a href="#travel">Travel</a>
+			</li>
+			<li class="navbar-child">
 				<a href="{{ "/" | prepend: site.baseurl }}">PFP</a>
 			</li>
 		</ul>
