--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -18,6 +18,14 @@ body {
 	margin:0px;
 }
 
+.container > a {
+	text-decoration: underline;
+}
+
+.container > a:hover {
+	color: $pfp-yellow;
+}
+
 *,*:before,*:after {
 	box-sizing: border-box;
 }
