added fll event :whale:

--- a/_includes/navbar-main.html
+++ b/_includes/navbar-main.html
@@ -1,6 +1,6 @@
-<div id="note">
-	Check out our off season event <a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle!</a> <a id="close">x</a>
-</div>
+<!-- <div id="note"> -->
+<!-- Check out our off season event <a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle!</a> <a id="close">x</a> -->
+<!-- </div> -->
 <script>
  close = document.getElementById("close");
  close.addEventListener('click', function() {
