--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -13,9 +13,9 @@
 			<li class="navbar-child">
 				<a href="#schedule">Schedule</a>
 			</li>
-			<li class="navbar-child">
-				<a href="#travel">Travel</a>
-			</li>
+			<!-- <li class="navbar-child"> -->
+			<!-- <a href="#travel">Travel</a> -->
+			<!-- </li> -->
 			<li class="navbar-child">
 				<a href="{{ "/" | prepend: site.baseurl }}">PFP</a>
 			</li>
