fixed FLL teams and event info

--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -17,7 +17,7 @@
 		<li class="navbar-child">
 			<a href="#">Our Events</a>
 			<ul class="dropdown">
-				<li><a href="{{"fll-regional-2016" | prepend: site.baseurl}}">FLL Qualifier</a></li>
+				<li><a href="{{"fll-regional" | prepend: site.baseurl}}">FLL Qualifier</a></li>
 				<li><a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle</a></li>
 				<li><a href="{{"ftc-state" | prepend: site.baseurl}}">State FTC</a></li>
 			</ul>
