--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -19,6 +19,7 @@
 			<ul class="dropdown">
 				<li><a href="{{"fll-regional" | prepend: site.baseurl}}">FLL Qualifier</a></li>
 				<li><a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle</a></li>
+				<li><a href="{{"frc-kickoff" | prepend: site.baseurl}}">FRC Kickoff</a></li>
 				<li><a href="{{"ftc-qualifier" | prepend: site.baseurl}}">FTC Qualifier</a></li>
 			</ul>
 		</li>
