--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -5,17 +5,11 @@
 {% endif %}
 	<div class="container">
 		<h1>Contact Us!</h1>
-		<form id="contact-us" contact-addr="{{ page.contact }}">
-			<div id="form-column" data-columns>
-				<input type='text' label='First Name' class='form-control contact-input' id='first' placeholder='First Name *'>
-				<input type='text' label='Last Name' class='form-control contact-input' id='last' placeholder='Last Name *'>
-			</div>
-			<div id="form-container">
-				<input type="text" id="subject" placeholder="Subject *">
-				<textarea placeholder="Body *" id="message"></textarea>
-				<input type="submit" value="Submit">
-			</div>
-		</form>
+			<form method="POST" action="https://formspree.io/pr@purduefirst.org">
+	  			<input type="email" name="email" placeholder="Your email">
+	  			<textarea name="message" placeholder="Your message"></textarea>
+	  			<button type="submit">Send</button>
+			</form>
 	</div>
 </section>
 <script src="{{"/js/submit.js" | prepend: site.baseurl}}"></script>
