--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -5,11 +5,17 @@
 {% endif %}
 	<div class="container">
 		<h1>Contact Us!</h1>
-			<form method="POST" action="https://formspree.io/pr@purduefirst.org">
-	  			<input type="email" name="email" placeholder="Your email">
-	  			<textarea name="message" placeholder="Your message"></textarea>
-	  			<button type="submit">Send</button>
-			</form>
+			<form id="contact-us" contact-addr="{{ page.contact }}">				<form method="POST" action="https://formspree.io/pr@purduefirst.org">
+			<div id="form-column" data-columns>		  			<input type="email" name="email" placeholder="Your email">
+				<input type='text' label='First Name' class='form-control contact-input' id='first' placeholder='First Name *'>		  			<textarea name="message" placeholder="Your message"></textarea>
+				<input type='text' label='Last Name' class='form-control contact-input' id='last' placeholder='Last Name *'>		  			<button type="submit">Send</button>
+			</div>				</form>
+			<div id="form-container">	
+				<input type="text" id="subject" placeholder="Subject *">	
+				<textarea placeholder="Body *" id="message"></textarea>	
+				<input type="submit" value="Submit">	
+			</div>	
+		</form>
 	</div>
 </section>
 <script src="{{"/js/submit.js" | prepend: site.baseurl}}"></script>
