Update Secondary Section Color
Secondary color was white which was messing up the contact form

--- a/_sass/components/section.scss
+++ b/_sass/components/section.scss
@@ -79,7 +79,7 @@ section {
 }
 .secondary-section {
 	background-color: #444444;
-	color: #fff;
+	color: #black;
 
 	hr {
 		border: 2px solid #ffffff;
