Remove Space From Form

--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -13,8 +13,7 @@
 	
 				<div id="form-container">
 					<input type="text" id="subject" placeholder="Subject *">
-				       		<textarea placeholder="Body *" id="message">
-						</textarea>
+				       		<textarea placeholder="Body *" id="message"></textarea>
 					<input type="submit" value="Submit">
 				</div>
 			</form>
