--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -9,18 +9,18 @@
 		<li class="navbar-child">
 			<a href="#">Our Teams</a>
 			<ul class="dropdown">
-				<li><a href="{{"fll" | prepend: site.baseurl}}">FLL</a></li>
-				<li><a href="{{"ftc" | prepend: site.baseurl}}">FTC</a></li>
-				<li><a href="{{"frc" | prepend: site.baseurl}}">FRC</a></li>
+				<li><a href="{{"frc" | prepend: site.baseurl}}">FIRST Robotics Competition</a></li>
+				<li><a href="{{"ftc" | prepend: site.baseurl}}">FIRST Tech Challenge</a></li>
+				<li><a href="{{"fll" | prepend: site.baseurl}}">FIRST LEGO League</a></li>
 			</ul>
 		</li>
 		<li class="navbar-child">
 			<a href="#">Our Events</a>
 			<ul class="dropdown">
-				<li><a href="{{"fll-regional" | prepend: site.baseurl}}">FLL Qualifier</a></li>
 				<li><a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle</a></li>
 				<li><a href="{{"frc-kickoff" | prepend: site.baseurl}}">FRC Kickoff</a></li>
 				<li><a href="{{"ftc-qualifier" | prepend: site.baseurl}}">FTC Qualifier</a></li>
+				<li><a href="{{"fll-regional" | prepend: site.baseurl}}">FLL Qualifier</a></li>
 			</ul>
 		</li>
 		<li class="navbar-child">
