Fix home button

--- a/_includes/navbar-events.html
+++ b/_includes/navbar-events.html
@@ -5,7 +5,7 @@
 		</div>
 		<ul class="navbar-child-container navbar-right">
 			<li class="navbar-child">
-				<a href="#">Home</a>
+				<a href="/">Home</a>
 			</li>
 			<li class="navbar-child">
 				<a href="#location">Location</a>
@@ -16,9 +16,6 @@
 			<!-- <li class="navbar-child"> -->
 			<!-- <a href="#travel">Travel</a> -->
 			<!-- </li> -->
-			<li class="navbar-child">
-				<a href="{{ "/" | prepend: site.baseurl }}">PFP</a>
-			</li>
 		</ul>
 	</div>
 </div>
