--- a/_sass/components/navbar.scss
+++ b/_sass/components/navbar.scss
@@ -87,7 +87,7 @@
 
 		& > img {
 			padding-right: 1em;
-			height: 1.75em;
+			height: 3em;
 		}
 	}
 
@@ -155,7 +155,9 @@
 	.navbar-child-container {
 		margin: 0;
 		padding-left: 0 !important;
+		padding-top: 2.25em;
 		position: relative;
+		font-size: 17px;
 	}
 
 }
