--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -2,7 +2,7 @@
 	<div class="navbar-brand">
 		<img src="{{"img/pfp_logo.svg" | site.baseurl}}" />
 	</div>
-	
+
 	<ul class="navbar-child-container navbar-right">
 		<li class="navbar-child">
 			<a href="{{"/" | site.baseurl}}">Home</a>
@@ -18,6 +18,7 @@
 		<li class="navbar-child">
 			<a href="#">Our Events</a>
 			<ul class="dropdown">
+				<li><a href="{{"purdue-forums" | prepend: site.baseurl}}">Purdue First Forums</a></li>
 				<li><a href="{{"boilerbotbattle" | prepend: site.baseurl}}">Boiler Bot Battle</a></li>
 				<li><a href="{{"frc-kickoff" | prepend: site.baseurl}}">FRC Kickoff</a></li>
 				<li><a href="{{"ftc-qualifier" | prepend: site.baseurl}}">FTC Qualifier</a></li>
