added the calendar page & tweaked the navbar

--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -28,5 +28,8 @@
 		<li class="navbar-child">
 			<a href="https://boilerlink.purdue.edu/organization/purduefirstprograms/">BoilerLink</a>
 		</li>
+		<li class="navbar-child">
+			<a href="/calendar.html">Calendar</a>
+		</li>
 	</ul>
 </div>
