--- a/_layouts/medium-image.html
+++ b/_layouts/medium-image.html
@@ -3,7 +3,7 @@
 		{% include headers.html %}
 	</head>
 	<body>
-		{% include navbar-compact.html %}
+		{% include navbar-main.html %}
 		<div class="header-image"  style="background-image: url('{{ page.image | prepend: "/img/" | prepend: site.baseurl}}');">
 		</div>
 		{{ content }}
