--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -9,15 +9,11 @@
 				<div id="form-column" data-columns>
 					<input type='text' label='First Name' class='form-control contact-input' id='first' placeholder='First Name *'>
 					<input type='text' label='Last Name' class='form-control contact-input' id='last' placeholder='Last Name *'>
-				</div>
-	
-				<div id="form-container">
 					<input type="text" id="subject" placeholder="Subject *">
-				       		<textarea placeholder="Body *" id="message"></textarea>
+				       	<textarea id="message" placeholder="Body *"></textarea>
 					<input type="submit" value="Submit">
 				</div>
 			</form>
-		       
 	</div>
 </section>
 <script src="{{"/js/submit.js" | prepend: site.baseurl}}"></script>
