Removal of old pages from nav bar.

--- a/_includes/base-navbar.html
+++ b/_includes/base-navbar.html
@@ -8,12 +8,7 @@
 			<a href="{{"/" | site.baseurl}}">Home</a>
 		</li>
 		<li class="navbar-child">
-			<a href="#">Our Teams</a>
-			<ul class="dropdown">
-				<li><a href="{{"frc" | prepend: site.baseurl}}">FIRST Robotics Competition</a></li>
-				<li><a href="{{"ftc" | prepend: site.baseurl}}">FIRST Tech Challenge</a></li>
-				<li><a href="{{"fll" | prepend: site.baseurl}}">FIRST LEGO League</a></li>
-			</ul>
+			<a href="{{"mentoring" | prepend: site.baseurl}}">Our Teams</a>
 		</li>
 		<li class="navbar-child">
 			<a href="#">Our Events</a>
