Fixed social media icon file paths

--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -23,7 +23,7 @@
 			
 			footer img {
 				border-right: none;
-				margine: none;
+				margin: none;
 			}
 		</style>
 		<footer>
@@ -31,10 +31,10 @@
 		  <div><p>© 2023 Purdue FIRST Programs</p></div>
 		  <div>
 			<ul>
-			  <li><a href="https://www.instagram.com/PurdueFIRST/" target="_blank"><img style="height:32px" src="socials-instagram.svg"></a></li>
-			  <li><a href="https://www.facebook.com/PurdueFIRST/" target="_blank"><img style="height:32px" src="socials-facebook.svg"></a></li>
-			  <li><a href="https://twitter.com/PurdueFIRST" target="_blank"><img style="height:32px" src="socials-twitter.svg"></a></li>
-			  <li><a href="https://www.linkedin.com/groups/4394104/" target="_blank"><img style="height:32px" src="socials-linkedin.svg"></a></li>
+			  <li><a href="https://www.instagram.com/PurdueFIRST/"><img style="height:32px" src="img/socials-instagram.svg"></a></li>
+			  <li><a href="https://www.facebook.com/PurdueFIRST/"><img style="height:32px" src="img/socials-facebook.svg"></a></li>
+			  <li><a href="https://twitter.com/PurdueFIRST"><img style="height:32px" src="img/socials-twitter.svg"></a></li>
+			  <li><a href="https://www.linkedin.com/groups/4394104/"><img style="height:32px" src="img/socials-linkedin.svg"></a></li>
 			</ul>
 		  </div>
 		</footer>
