Fixed social media icon formatting (part 2)

--- a/_includes/contact-us.html
+++ b/_includes/contact-us.html
@@ -23,7 +23,10 @@
 			
 			footer img {
 				border-right: none;
-				margin: none;
+				margin-left: 0.5em;
+				margin-right: 0em;
+				margin-top: 0em;
+				margin-bottom: 0em;
 			}
 		</style>
 		<footer>
