--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{ page.title }}</title>
 <link type="text/css" rel="stylesheet" href="{{"/style.css" | prepend: site.baseurl}}" />
-<link rel="icon" href="{{"img/pfp_logo_favicon.png"}}" />
+<link rel="icon" href="{{"img/SimpleFoutainLogo.svg"}}" />
